# proxtract

./: .coverage  .gitignore  README.md  coverage.xml  extracted.txt  extracted2.txt  plan.md  pyproject.toml
scripts/: smoke_test.py  tui_smoke.py
src/proxtract/: __init__.py  commands.py  completion.py  config.py  core.py  interactive.py  main.py  state.py  utils.py
src/proxtract/tui/: app.py  styles.tcss
src/proxtract/tui/screens/: __init__.py  edit_setting_screen.py  extract_screen.py  main_screen.py  settings_screen.py  summary_screen.py
src/proxtract/tui/widgets/: __init__.py  action_item.py  completion_input.py  setting_item.py  summary_display.py
tests/: README.md  conftest.py  test_config.py  test_core.py  test_interactive.py  test_main.py  test_state.py  test_tui.py  test_tui_main_screen.py  test_tui_responsive.py  test_utils.py  test_widgets.py
tests/tui/: test_completion_input.py
